<resources>
    <string name="app_name">Material Tab</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="simple_tabs">Simple Tabs</string>
    <string name="scrollable_tabs">Scrollable Tabs</string>
    <string name="icon_text_tabs">Icon &amp; Text Tabs</string>
    <string name="icon_tabs">Icon Tabs</string>
    <string name="custom_tabs">Custom Tabs</string>
</resources>
