<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dimpossitorus.materialtab.MainActivity">

    <Button
        android:id="@+id/simpleTabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/simple_tabs"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/scrollableTabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/scrollable_tabs"
        android:textSize="16sp"
        android:layout_below="@+id/simpleTabs"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/iconTextTabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/icon_text_tabs"
        android:textSize="16sp"
        android:layout_below="@+id/scrollableTabs"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/iconTabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/icon_tabs"
        android:textSize="16sp"
        android:layout_below="@+id/iconTextTabs"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/customTabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/custom_tabs"
        android:textSize="16sp"
        android:layout_below="@+id/iconTabs"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
